src/test/fun-test/parser/Wrong9.java.err
Parsing error: ')' expected, got: '0' at line 2, pos 15
