src/test/fun-test/parser/Wrong9.java
class Main {
    void main(0 {

    }
}